# mini_rust_olap

./: .gitignore  Cargo.toml  README.md  REORGANIZATION_COMPLETE.md  phase6_1-learning-guide.md  phase6_2-learning-guide.md  prd.md  progress.md  test.md  test_data.csv  test_repl.sh  test_repl_simple.sh
.githooks/: pre-commit  pre-push
benches/: README.md  query_benchmark.rs
docs/: ci-pipeline-assessment.md  ci-pipeline-setup.md  phase1-assessment.md  phase1-learning-guide.md  phase2-assessment.md  phase2-learning-guide.md  phase4-assessment.md  phase4-learning-guide.md  phase4_learning_guide.md  phase6_1-assessment.md  phase6_2-assessment.md  phase7-assessment.md  phase7-learning-guide.md  phase7-summary.md  repl-quick-start.md
docs/performance/: memory_and_optimization.md
docs/references/: REORGANIZATION_SUMMARY.md  prd.md  progress.md
docs/sessions/: phase8_completion.md
docs/testing/: test_strategy.md
examples/: README.md  csv_loading.rs  simple_table.rs
scripts/: final_test.sh  setup-ci-hooks.sh  test_repl.sh  test_repl_simple.sh
src/: aggregates.rs  column.rs  error.rs  execution.rs  ingest.rs  lib.rs  main.rs  parser.rs  planner.rs  types.rs
tests/: integration_tests.rs  manual_query.rs  parser_properties.rs
